# Fooocus_Nodes

./: .gitignore  .gitmodules  README.md  __init__.py  pyproject.toml  requirements.txt  user-config.yaml
py/: api.py  config.py  fooocus.py  fooocusNodes.py  log.py  prompt.py
py/extras/: README.md  expansion.py  face_crop.py  interrogate.py  ip_adapter.py  preprocessors.py  vae_interpose.py  wd14tagger.py
py/fooocus_modules/: async_worker.py  auth.py  config.py  core.py  default_pipeline.py  inpaint_worker.py  meta_parser.py  patch.py  patch_clip.py  private_logger.py  sdxl_styles.py  style_sorter.py  ui_gradio_extensions.py  upscaler.py
py/libs/: utils.py
py/modules/: advanced_parameters.py  config.py  core.py  default_pipeline.py  flags.py  lora.py  meta_parser.py  model_loader.py  patch.py  patch_clip.py  private_logger.py  sdxl_styles.py  upscaler.py  util.py
sampler/: config.py  fooocusNodes.py
sampler/extras/: expansion.py
sampler/modules/: async_worker.py  config.py  core.py  default_pipeline.py  meta_parser.py  model_loader.py  patch.py  private_logger.py  sample_hijack.py  sdxl_styles.py  upscaler.py
sampler/modules__bak/: core.py  inpaint_worker.py  patch.py  patch_clip.py  patch_precision.py  sample_hijack.py  (+1 more)
sdxl_styles/: sdxl_styles_fooocus.json
workflow/: basic.json  controlnet.json  detailer_fix.json  example.json  fooocus_describe.json  fooocus_prompt_expansion.json  fooocus_workflow.json  imagePrompt&faceSwap.json  imagePrompt_faceSwap.json  inpaint&outpaint.json  inpaint_outpaint.json  ipadapter_plus_style_transfer.json  upscale.json
(+41 files in other folders)
